--- a/css/main.css
+++ b/css/main.css
@@ -89,8 +89,7 @@ a {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.button:hover,
-.button:focus {
+.button:hover, .button:focus {
   color: var(--primary-white-color);
   background-color: var(--accent-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -110,19 +109,14 @@ a {
   margin-right: 10px;
 }
 
-.socials-link:hover .socials-icon,
-.socials-link:focus .socials-icon {
-  fill: #ffffff;
-}
-
 .socials-icon {
   fill: var(--icon-color);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.socials-link:hover,
-.socials-link:focus {
-  background-color: var(--accent-color);
+.socials-link:hover .socials-icon,
+.socials-link:focus .socials-icon {
+  fill: #ffffff;
 }
 
 .socials-link {
@@ -136,19 +130,8 @@ a {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.button-primary {
-  display: block;
-  margin-right: auto;
-  margin-left: auto;
-  border: 0;
-  color: var(--primary-white-color);
+.socials-link:hover, .socials-link:focus {
   background-color: var(--accent-color);
-  cursor: pointer;
-  font-weight: 700;
-  line-height: 1.88;
-  letter-spacing: 0.06em;
-  border-radius: 4px;
-  padding: 10px 32px;
 }
 
 .bakdrop {
@@ -190,20 +173,27 @@ a {
   border-radius: 50%;
   top: 8px;
   right: 8px;
+  cursor: pointer;
   display: flex;
   justify-content: center;
   align-items: center;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-button:focus,
-.modal-button:hover {
+.modal-button:focus, .modal-button:hover {
   fill: var(--accent-color);
 }
 
 .modal-form {
   display: flex;
   flex-direction: column;
+}
+
+.form-field {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.17;
+  margin-bottom: 20px;
 }
 
 .modal-form-head {
@@ -213,13 +203,6 @@ a {
   color: var(--title-text-color);
   line-height: 1.15;
   text-align: center;
-}
-
-.form-field {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.17;
-  margin-bottom: 10px;
 }
 
 .form-input {
@@ -237,6 +220,7 @@ a {
 }
 
 .form-message {
+  display: block;
   margin-top: 4px;
   padding: 12px 16px;
   width: 100%;
@@ -280,12 +264,12 @@ a {
   justify-content: center;
   font-size: 14px;
   line-height: 1.71;
+  cursor: pointer;
   color: var(--primary-text-color);
   margin-bottom: 30px;
 }
 
 .form-checkbox-field::before {
-  display: block;
   content: '';
   width: 16px;
   height: 15px;
@@ -293,14 +277,14 @@ a {
   margin-right: 7px;
   border: 2px solid var(--title-text-color);
   border-radius: 2px;
-  background-size: contain;
-  background-repeat: no-repeat;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-checkbox:checked + .form-checkbox-field::before {
-  background-image: url(/images/check.svg);
-  border: none;
+  background-image: url(../images/check.svg);
+  border-color: var(--accent-color);
+  background-color: var(--accent-color);
+  background-origin: border-box;
 }
 
 .form-checkbox:focus + .form-checkbox-field::before {
@@ -326,8 +310,7 @@ a {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-button:hover,
-.form-button:focus {
+.form-button:hover, .form-button:focus {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
@@ -350,12 +333,12 @@ a {
   margin-right: 93px;
 }
 
-.accent {
+.logo__accent {
   color: var(--accent-color);
 }
 
 /* nav */
-.nav-link {
+.site-nav__link {
   padding-top: 33.6px;
   padding-bottom: 33.6px;
   color: var(--title-text-color);
@@ -367,15 +350,15 @@ a {
   position: relative;
 }
 
-.current {
+.site-nav__link:hover, .site-nav__link:focus {
   color: var(--accent-color);
 }
 
-.site-nav {
-  display: flex;
+.site-nav__current {
+  color: var(--accent-color);
 }
 
-.current::after {
+.site-nav__current::after {
   content: '';
   width: 100%;
   height: 4px;
@@ -386,17 +369,16 @@ a {
   left: 0;
 }
 
-.nav-item:not(:last-child) {
+.site-nav {
+  display: flex;
+}
+
+.site-nav__item:not(:last-child) {
   margin-right: 50px;
 }
 
-.nav-link:hover,
-.nav-link:focus {
-  color: var(--accent-color);
-}
-
 /* contacts */
-.contacts-icon {
+.contacts-item__icon {
   margin-right: 10px;
   fill: currentColor;
 }
@@ -410,7 +392,7 @@ a {
   margin-right: 50px;
 }
 
-.contacts-link {
+.contacts-item__link {
   display: flex;
   align-items: center;
   padding-top: 32px;
@@ -423,8 +405,7 @@ a {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contacts-link:hover,
-.contacts-link:focus {
+.contacts-item__link:hover, .contacts-item__link:focus {
   color: var(--accent-color);
 }
 
@@ -451,6 +432,21 @@ a {
   margin-right: auto;
   margin-left: auto;
   width: 696px;
+}
+
+.button-primary {
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  border: 0;
+  color: var(--primary-white-color);
+  background-color: var(--accent-color);
+  cursor: pointer;
+  font-weight: 700;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  border-radius: 4px;
+  padding: 10px 32px;
 }
 
 .features {
@@ -576,19 +572,14 @@ a {
   height: 92px;
 }
 
-.clients-link:hover,
-.clients-link:focus {
-  border-color: var(--accent-color);
+.clients-icon {
+  fill: var(--icon-color);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-link:hover .clients-icon,
 .clients-link:focus .clients-icon {
   fill: var(--accent-color);
-}
-
-.clients-icon {
-  fill: var(--icon-color);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-link {
@@ -601,6 +592,10 @@ a {
   justify-content: center;
   background-color: var(--primary-white-color);
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.clients-link:hover, .clients-link:focus {
+  border-color: var(--accent-color);
 }
 
 .filter-button {
@@ -633,13 +628,12 @@ a {
   margin-bottom: -30px;
 }
 
-.portfolio-link:hover,
-.portfolio-link:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
 .portfolio-link {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-link:hover, .portfolio-link:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .portfolio-title {
@@ -661,11 +655,6 @@ a {
   overflow: hidden;
 }
 
-.portfolio-link:hover .about-project,
-.portfolio-link:focus .about-project {
-  transform: translateY(0%);
-}
-
 .about-project {
   position: absolute;
   bottom: 0;
@@ -681,6 +670,11 @@ a {
   padding: 63px 24px;
   transform: translateY(101%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-link:hover .about-project,
+.portfolio-link:focus .about-project {
+  transform: translateY(0%);
 }
 
 .footer {
@@ -717,8 +711,7 @@ a {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-link:hover,
-.fotter-link:focus {
+.footer-link:hover, .footer-link:focus {
   color: var(--accent-color);
 }
 
@@ -766,17 +759,16 @@ a {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.footer-socials-link:hover, .footer-socials-link:focus {
+  background-color: var(--accent-color);
+}
+
 .footer-socials-list {
   display: flex;
 }
 
 .footer-icon {
   fill: var(--primary-white-color);
-}
-
-.footer-socials-link:hover,
-.footer-socials-link:focus {
-  background-color: var(--accent-color);
 }
 
 .footer-form-field {
